<resources>
    <string name="app_name">OIDC Android Client</string>

    <string name="OIDCSetOptionsButton">SET OIDC CLIENT</string>
    <string name="OIDCScopesOptionHint">Scopes (separed by space)</string>
    <string name="OIDCRedirectOptionHint">Redirect URL</string>
    <string name="OIDCSecretOptionHint">Client Password</string>
    <string name="OIDCClientIdOptionHint">Client Id</string>
    <string name="OIDCFlowTypeOptionHint">Flow Type %1$s</string>

    <string name="OIDCUserNameOptionHint">Username</string>
    <string name="OIDCUserPwdOptionHint">Password</string>
    <string name="OIDCLoginnHint">LOG IN</string>

    <string name="OIDCOptionsMandatoryError">Mandatory</string>
</resources>
