<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authenticatorActivityLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.lnikkila.oidcsample.oidc.authenticator.AuthenticatorActivity">

    <!-- see http://stackoverflow.com/q/3130654/665823 of why we shouldn't create a WebView via XML layout -->
    <!--<WebView-->
        <!--android:id="@+id/WebView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

    <ScrollView
        android:id="@+id/clientFormLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/clientIdInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/Base.Theme.OidcLib.TextInputLayout.TextAppearance">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:theme="@style/Base.Theme.OidcLib.EditText"
                    android:id="@+id/clientIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/OIDCClientIdOptionHint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/clientSecretInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/Base.Theme.OidcLib.TextInputLayout.TextAppearance">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:theme="@style/Base.Theme.OidcLib.EditText"
                    android:id="@+id/clientSecretEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/OIDCSecretOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/redirectUriInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/Base.Theme.OidcLib.TextInputLayout.TextAppearance">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:theme="@style/Base.Theme.OidcLib.EditText"
                    android:id="@+id/redirectUriEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/OIDCRedirectOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/scopesInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/Base.Theme.OidcLib.TextInputLayout.TextAppearance">
                <com.lnikkila.oidc.minsdkcompat.CompatEditText
                    android:theme="@style/Base.Theme.OidcLib.EditText"
                    android:id="@+id/scopesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/OIDCScopesOptionHint"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:theme="@style/Base.Theme.OidcLib.SpinnerStyle"
                android:id="@+id/flowTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dialog"
                tools:ignore="UnusedAttribute" />

            <android.support.v7.widget.AppCompatButton
                android:theme="@style/Base.Theme.OidcLib.ButtonStyle"
                android:id="@+id/setOIDCClientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OIDCSetOptionsButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
